syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    This table contains live trading bands, as advertised by the listing exchange, for futures markets with bands.
*/    
message ProductPriceBand {
    message PKey {
        
        ExpiryKey fkey = 10;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    double low_limit_price = 100; // Low price limit (0 if not set)
    double high_limit_price = 103; // high price limit (0 if not set)
    double max_price_var = 106; // Maximum price variation allowed (distance from last best price (bid/ask))
    google.protobuf.Timestamp timestamp = 109; // time of last state update
}


